# docs/swagger.json
@@ -28,7 +28,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.TriageRequest"
+                            "$ref": "#/definitions/internal_delivery_http_handlers.TriageRequest"
                         }
                     }
                 ],
@@ -99,7 +99,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.CreateDevicePayload"
+                            "$ref": "#/definitions/internal_delivery_http_handlers.CreateDevicePayload"
                         }
                     }
                 ],
@@ -180,7 +180,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Menginisiasi pesanan servis elektronik baru oleh Konsumen.",
+                "description": "Menginisiasi pesanan servis elektronik baru oleh Konsumen. Bisa diikat langsung ke teknisi atau dibiarkan kosong untuk pesanan publik.",
                 "consumes": [
                     "application/json"
                 ],
@@ -193,12 +193,12 @@
                 "summary": "Membuat Pesanan Perbaikan",
                 "parameters": [
                     {
-                        "description": "Data Kerusakan",
+                        "description": "Data Kerusakan dan Booking Opsional",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.CreateOrderPayload"
+                            "$ref": "#/definitions/internal_delivery_http_handlers.CreateOrderPayload"
                         }
                     }
                 ],
@@ -271,7 +271,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/usecase.CompleteOrderRequest"
+                            "$ref": "#/definitions/github_com_noireveil_ecoserve-backend_internal_usecase.CompleteOrderRequest"
                         }
                     }
                 ],
@@ -306,7 +306,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.RegisterTechnicianRequest"
+                            "$ref": "#/definitions/internal_delivery_http_handlers.RegisterTechnicianRequest"
                         }
                     }
                 ],
@@ -384,7 +384,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.RequestOTPPayload"
+                            "$ref": "#/definitions/internal_delivery_http_handlers.RequestOTPPayload"
                         }
                     }
                 ],
@@ -419,7 +419,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.VerifyOTPPayload"
+                            "$ref": "#/definitions/internal_delivery_http_handlers.VerifyOTPPayload"
                         }
                     }
                 ],
@@ -514,83 +514,39 @@
         }
     },
     "definitions": {
-        "handlers.CreateDevicePayload": {
+        "github_com_noireveil_ecoserve-backend_internal_domain.User": {
             "type": "object",
             "properties": {
-                "brand_name": {
-                    "type": "string",
-                    "example": "Apple iPhone 14 Pro"
+                "createdAt": {
+                    "type": "string"
                 },
-                "category": {
-                    "type": "string",
-                    "example": "Smartphone"
-                },
-                "weight_in_kg": {
-                    "type": "number",
-                    "example": 0.21
-                }
-            }
-        },
-        "handlers.CreateOrderPayload": {
-            "type": "object",
-            "properties": {
-                "device_category": {
-                    "type": "string",
-                    "example": "Pendingin \u0026 Komersial"
-                },
-                "problem_description": {
-                    "type": "string",
-                    "example": "Kompresor mati dan berasap"
-                }
-            }
-        },
-        "handlers.RegisterTechnicianRequest": {
-            "type": "object"
-        },
-        "handlers.RequestOTPPayload": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string",
-                    "example": "yasyfi7@gmail.com"
-                },
-                "full_name": {
-                    "type": "string",
-                    "example": "Muhammad Yasyfi"
-                }
-            }
-        },
-        "handlers.TriageRequest": {
-            "type": "object",
-            "properties": {
-                "latitude": {
-                    "type": "number",
-                    "example": -6.1944
-                },
-                "longitude": {
-                    "type": "number",
-                    "example": 106.8229
-                },
-                "message": {
-                    "type": "string",
-                    "example": "Kompresor kulkas saya mati dan bau hangus."
-                }
-            }
-        },
-        "handlers.VerifyOTPPayload": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "string",
-                    "example": "123456"
+                "deletedAt": {
+                    "$ref": "#/definitions/gorm.DeletedAt"
                 },
                 "email": {
-                    "type": "string",
-                    "example": "yasyfi7@gmail.com"
+                    "type": "string"
+                },
+                "fullName": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "otpcode": {
+                    "type": "string"
+                },
+                "otpexpiresAt": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
                 }
             }
         },
-        "usecase.CompleteOrderRequest": {
+        "github_com_noireveil_ecoserve-backend_internal_usecase.CompleteOrderRequest": {
             "type": "object",
             "properties": {
                 "category": {
@@ -610,6 +566,135 @@
                 },
                 "photo_url": {
                     "type": "string"
+                }
+            }
+        },
+        "gorm.DeletedAt": {
+            "type": "object",
+            "properties": {
+                "time": {
+                    "type": "string"
+                },
+                "valid": {
+                    "description": "Valid is true if Time is not NULL",
+                    "type": "boolean"
+                }
+            }
+        },
+        "internal_delivery_http_handlers.CreateDevicePayload": {
+            "type": "object",
+            "properties": {
+                "brand_name": {
+                    "type": "string",
+                    "example": "Apple iPhone 14 Pro"
+                },
+                "category": {
+                    "type": "string",
+                    "example": "Smartphone"
+                },
+                "weight_in_kg": {
+                    "type": "number",
+                    "example": 0.21
+                }
+            }
+        },
+        "internal_delivery_http_handlers.CreateOrderPayload": {
+            "type": "object",
+            "properties": {
+                "device_category": {
+                    "type": "string",
+                    "example": "Pendingin \u0026 Komersial"
+                },
+                "problem_description": {
+                    "type": "string",
+                    "example": "Kompresor mati dan berasap"
+                },
+                "technician_id": {
+                    "type": "string",
+                    "example": "(Opsional) uuid-teknisi"
+                }
+            }
+        },
+        "internal_delivery_http_handlers.RegisterTechnicianRequest": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "experienceYears": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "latitude": {
+                    "type": "number",
+                    "example": -6.1944
+                },
+                "location": {
+                    "type": "string"
+                },
+                "longitude": {
+                    "type": "number",
+                    "example": 106.8229
+                },
+                "rating": {
+                    "type": "number"
+                },
+                "specialization": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/github_com_noireveil_ecoserve-backend_internal_domain.User"
+                },
+                "userID": {
+                    "type": "string"
+                }
+            }
+        },
+        "internal_delivery_http_handlers.RequestOTPPayload": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "example": "yasyfi7@gmail.com"
+                },
+                "full_name": {
+                    "type": "string",
+                    "example": "Muhammad Yasyfi"
+                }
+            }
+        },
+        "internal_delivery_http_handlers.TriageRequest": {
+            "type": "object",
+            "properties": {
+                "latitude": {
+                    "type": "number",
+                    "example": -6.1944
+                },
+                "longitude": {
+                    "type": "number",
+                    "example": 106.8229
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Kompresor kulkas saya mati dan bau hangus."
+                }
+            }
+        },
+        "internal_delivery_http_handlers.VerifyOTPPayload": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string",
+                    "example": "123456"
+                },
+                "email": {
+                    "type": "string",
+                    "example": "yasyfi7@gmail.com"
                 }
             }
         }
